--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="status_pending_text">#92400E</color>
     <color name="status_rejected_bg">#FEE2E2</color>
     <color name="status_rejected_text">#991B1B</color>
+    <color name="status_warning_bg">#FFF7ED</color>
+    <color name="status_warning_icon">#C2410C</color>
 </resources>
