--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,16 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/loginFragment"> <fragment
-    android:id="@+id/loginFragment"
-    android:name="com.example.vistas.LoginFragment"
-    tools:layout="@layout/screen_log_empl">
-    <action
-        android:id="@+id/action_login_to_dashboard"
-        app:destination="@id/dashboardFragment"
-        app:popUpTo="@id/loginFragment"
-        app:popUpToInclusive="true" />
-</fragment>
+    app:startDestination="@id/loginFragment">
+
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.example.vistas.LoginFragment"
+        tools:layout="@layout/screen_log_empl">
+        <action
+            android:id="@+id/action_login_to_dashboard"
+            app:destination="@id/dashboardFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
 
     <fragment
         android:id="@+id/dashboardFragment"
@@ -36,5 +38,10 @@
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.example.vistas.SettingsFragment" />
+
+    <fragment
+        android:id="@+id/adminFragment"
+        android:name="com.example.vistas.AdminFragment"
+        tools:layout="@layout/screen_admin" />
 
 </navigation>
