--- a/app/src/main/res/drawable/bg_status_pill.xml
+++ b/app/src/main/res/drawable/bg_status_pill.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="20dp" />
-    <padding android:left="8dp" android:right="8dp" android:top="2dp" android:bottom="2dp" />
-</shape>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <corners android:radius="50dp"/>
+    <solid android:color="#FFFFFF"/> </shape>
