--- a/app/src/main/res/layout/item_gasto.xml
+++ b/app/src/main/res/layout/item_gasto.xml
@@ -10,6 +10,7 @@
     app:cardCornerRadius="16dp"
     app:cardElevation="2dp"
     app:cardBackgroundColor="@color/surface_card">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,6 +19,7 @@
         android:padding="16dp">
 
         <ImageView
+            android:id="@+id/imgIcono"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/bg_icon_placeholder"
