--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
         android:id="@+id/dashboardFragment"
-        android:icon="@android:drawable/ic_menu_today"
+        android:icon="@drawable/ic_dashboard"
         android:title="Dashboard" />
+
     <item
         android:id="@+id/expensesFragment"
-        android:icon="@android:drawable/ic_menu_agenda"
+        android:icon="@android:drawable/ic_menu_my_calendar"
         android:title="Gastos" />
-    <item
-        android:id="@+id/reportsFragment"
-        android:icon="@android:drawable/ic_menu_manage"
-        android:title="Reportes" />
+
     <item
         android:id="@+id/settingsFragment"
         android:icon="@android:drawable/ic_menu_preferences"
         android:title="Ajustes" />
+
 </menu>
