--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -33,7 +33,9 @@
 
     <fragment
         android:id="@+id/reportsFragment"
-        android:name="com.example.vistas.DashboardFragment" />
+        android:name="com.example.vistas.ReportsFragment"
+        android:label="Reportes"
+        tools:layout="@layout/screen_report" />
 
     <fragment
         android:id="@+id/settingsFragment"
